[gd_scene load_steps=8 format=2]

[ext_resource path="res://Font/GameFontNormal.tres" type="DynamicFont" id=1]
[ext_resource path="res://MainMenu/MainMenuButton.gd" type="Script" id=2]
[ext_resource path="res://MainMenu/button_menu2.png" type="Texture" id=3]
[ext_resource path="res://MainMenu/button_menu3.png" type="Texture" id=4]
[ext_resource path="res://MainMenu/button_menu1.png" type="Texture" id=5]
[ext_resource path="res://UI/button.wav" type="AudioStream" id=6]
[ext_resource path="res://SoundEffectPlayer/SoundEffectPlayer.tscn" type="PackedScene" id=7]

[node name="MainMenuButton" type="TextureButton"]
margin_right = 64.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
stretch_mode = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -7.0
custom_fonts/font = ExtResource( 1 )
text = "play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundEffectPlayer" parent="." instance=ExtResource( 7 )]
clips = [ ExtResource( 6 ) ]
[connection signal="button_down" from="." to="." method="_on_PlayButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_PlayButton_button_up"]
[connection signal="pressed" from="." to="." method="_on_MainMenuButton_pressed"]
[connection signal="finished" from="SoundEffectPlayer" to="." method="_on_SoundEffectPlayer_finished"]
